# Python-Training

./: Exercise.ipynb  pyproject.toml  time_series_temp.csv
.ipynb_checkpoints/: Exercise-checkpoint.ipynb  time_series_temp-checkpoint.csv
