[tool.poetry]
name = "python-training"
version = "0.1.0"
description = ""
authors = ["sayeed2107 <said.dzhabrailov.95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
